--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                             <i class="fas fa-user"></i>
                              <div class="canvas"><img src="images/Tarjeta.jpeg" alt="" class="tarjeta" id="tarjeta" title="Click para descargar tarjeta"></div>
                             <div class="info">
-                                <div class="head">Nombre</div>
+                                <div class="head">Tarjeta</div>
                                 <div class="sub-title">Mauricio Hernández Bustamante</div>
                             </div>
                         </div>
