--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="column right"> 
                     <div class="text text_">Soy <span class="typing-6"></span></div>
                     <div class="text">Aspiro <span class="typing-7"></span></div>
-                    <p>Soy un ciudadano que ama este bello municipio, esposo de una admirable mujer y padre de familia que conoce los desafíos sociales y económicas que nos exige el día a día. He vivido en el bello Municipio de Silao toda mi vida y he visto de primera mano los desafíos que enfrentamos como comunidad. Sé que hay mucho trabajo por hacer para mejorar la calidad de vida de nuestros ciudadanos y estoy comprometido a poner todo mi empeño, determinación, convicciones e ideales para lograrlo.</p>
+                    <p>Soy un ciudadano que ama este bello municipio, esposo de una admirable mujer y padre de familia que conoce los desafíos sociales y económicos que nos exige el día a día. He vivido en el bello Municipio de Silao toda mi vida y he visto de primera mano los desafíos que enfrentamos como comunidad. Sé que hay mucho trabajo por hacer para mejorar la calidad de vida de nuestros ciudadanos y estoy comprometido a poner todo mi empeño, determinación, convicciones e ideales para lograrlo.</p>
                 </div>
             </div>
         </div>
